--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garlic Pasta</title>
 </head>
-
+    <link rel="stylesheet" href="style.css">
 <body>
     <h1>Garlic Pasta Recipe</h1>
 
@@ -113,7 +113,7 @@
         </li>
         <img src="./images/garlic_pasta_step_6.png" alt="Pasta with chopped parsley" height="512px" width="512px">
     </ol>
-    <b>
+    <b class="last-bold">
         Serve Hot And Enjoy!!!
     </b>
     </p>
